FCurve Modifier parameter is changed only with time change #46553

Closed
opened 2015-10-21 11:48:18 +02:00 by Cenek Strichel · 7 comments

System Information
W10 64b

Blender Version
2.76

Short description of error
I don`t know if it is limitation or bug, but if you change any parameter in modifier, it is not visible until you change time.

Exact steps for others to reproduce the error

  1. open: notChange.blend
  2. select Y Location curve in F-Curve
  3. change "y =" parameter
  4. cube stay without move until you play animation

Same happen in all modifiers. Sometimes it is good if you have feedback immediatelly ;)

Btw. it would be awesome, if there will be some modifier for offseting channels. So animator can use same animation clip, but only with same offset for translate X, some another offset for translate Y .. etc.

I loved it in the Softimage: http://download.autodesk.com/global/docs/softimage2014/en_us/index.html?url=files/actions_OffsettingActionValueswithanOffsetMap.htm,topicNumber=d30e185446

**System Information** W10 64b **Blender Version** 2.76 **Short description of error** I don`t know if it is limitation or bug, but if you change any parameter in modifier, it is not visible until you change time. **Exact steps for others to reproduce the error** 1) open: [notChange.blend](https://archive.blender.org/developer/F246112/notChange.blend) 2) select Y Location curve in F-Curve 3) change "y =" parameter 4) cube stay without move until you play animation Same happen in all modifiers. Sometimes it is good if you have feedback immediatelly ;) Btw. it would be awesome, if there will be some modifier for offseting channels. So animator can use same animation clip, but only with same offset for translate X, some another offset for translate Y .. etc. I loved it in the Softimage: http://download.autodesk.com/global/docs/softimage2014/en_us/index.html?url=files/actions_OffsettingActionValueswithanOffsetMap.htm,topicNumber=d30e185446
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Cenda

Added subscriber: @Cenda
Author

notChange.png

![notChange.png](https://archive.blender.org/developer/F246113/notChange.png)
Bastien Montagne changed title from Modifier parameter is changed only with time change to FCurve Modifier parameter is changed only with time change 2015-10-22 17:54:35 +02:00
Joshua Leung was assigned by Bastien Montagne 2015-10-22 17:54:35 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

Added subscriber: @kevindietrich

Added subscriber: @kevindietrich

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This was fixed in 9a88bd5590.

This was fixed in 9a88bd5590.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46553
No description provided.